# virtual-rc-controller

./: Cargo.toml  README.md  run.sh
hid-server/: Cargo.toml
hid-server/src/: main.rs  reports.rs  ws_device.rs
src/: main.rs  reports.rs
ui/: package.json
ui/src/: App.tsx  index.css  index.tsx
ui/src/gamepad/: Gamepad.tsx  store.ts  websocket.ts
ui/src/lib/: redux.ts
