[package]
name = "virtual-rc-controller"
version = "0.1.0"
authors = ["Will Frew <will.frew1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usbd-hid = "0.5.0"
uhid-virt = "0.0.4"
actix = "0.11.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"

[patch.crates-io]
ssmarshal = {git = "https://gitlab.com/KokaKiwi/ssmarshal", branch = "update-rust-deps"}
