[package]
name = "virtual-rc-controller"
version = "0.1.0"
authors = ["Will Frew <will.frew1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usbd-hid = "0.5.0"
uhid-virt = "0.0.4"
# actix-web-actors does not support actix 0.11
# See: https://github.com/actix/actix-web/issues/2121#issuecomment-808714046
actix = "0.10"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
serde = "1.0.117"
serde_json = "1.0.59"

[patch.crates-io]
# Use a patched version of ssmarshal as the 1.0.0 version is broken when used with actix
# See: https://gitlab.com/robigalia/ssmarshal/-/merge_requests/1
ssmarshal = {git = "https://gitlab.com/KokaKiwi/ssmarshal", branch = "update-rust-deps"}
